--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "gulp-plumber": "^1.0.0",
     "isparta": "^3.0.3",
     "socket.io": "^1.4.6",
-    "socket.io-client": "^1.4.6"
+    "socket.io-client": "^1.4.6",
+    "ifconfig": "0.0.1"
   },
   "eslintConfig": {
     "extends": "xo-space",
